--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
