--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flags-select": "^2.1.2",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
