--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "react-webcam": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.2"
   },
