--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-sound": "^1.2.0",
     "react-toastify": "^8.1.0",
     "react-webcam": "^6.0.0",
     "reactjs-popup": "^2.0.5",
