--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
-    "react-sound": "^1.2.0",
     "react-toastify": "^8.1.0",
+    "react-useanimations": "^2.0.3",
     "react-webcam": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.2"
