--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@testing-library/jest-dom": "^5.15.0",
@@ -11,6 +12,7 @@
     "axios": "^0.24.0",
     "firebase": "^9.4.0",
     "history": "^5.1.0",
+    "material-table": "^1.69.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
