--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-table/core": "^0.2.9",
     "@material-ui/core": "^4.12.3",
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/face_mesh": "^0.4.1633559619",
