--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-table": "^1.69.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
     "react-icons": "^4.3.1",
