--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "firebase": "^9.4.0",
+    "gif.js.optimized": "^1.0.1",
     "history": "^5.1.0",
     "material-table": "^1.69.3",
     "node-sass": "^6.0.1",
