--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^9.4.0",
     "gif.js.optimized": "^1.0.1",
     "history": "^5.1.0",
+    "html2canvas": "^1.3.3",
     "material-table": "^1.69.3",
     "node-sass": "^6.0.1",
+    "patch-package": "^6.4.7",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -35,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": [
