--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^6.0.1",
     "patch-package": "^6.4.7",
     "react": "^17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
