--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "patch-package": "^6.4.7",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
+    "react-csv": "^2.2.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
